# AI-Based-Smart-Network-Routing-System

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.slim  README.md  REPOSITORY_GOVERNANCE_MASTER_REPORT.md  ROADMAP.md  SECURITY.md  anomaly.joblib  branch_governance_report.md  cicd_governance_audit.md  commit_governance_audit.md  docker-compose.yml  governance_remediation_plan.md  governance_v2_spec.md  historical_failure_analysis.md  pr_governance_strategy.md  pyproject.toml  repro_v2.py  security_governance_matrix.md  topo.json  traffic.csv  update_predict_gnn.py
.github/workflows/: ci.yml
configs/: nroute.yaml
data/: .gitkeep  sample_netflow.csv  sample_topology.json  sample_traffic.csv
docs/: 6 Documents You Should Create Before Vibe Coding Any App.md  Implementation_Plan.md  Multi_Agent_AI_System_Architecture.md  PRD.md  TRD.md  api_reference.md  cli_reference.md  custom_extensions.md  deployment.md  deployment_readiness_report.md  publishing.md  quickstart.md
docs/ai/: DATASET_GENERATOR_SPEC.md  EVALUATION_SPEC.md  FEATURE_ENGINEERING_SPEC.md  GCN_SPEC.md  GRAPHSAGE_SPEC.md  GRAPH_TENSOR_SPEC.md  MODEL_REGISTRY_SPEC.md
experiments/: README.md
graphite-demo/: server.js
k8s/: namespace.yaml  nroute-deployment.yaml  nroute-output-pvc.yaml  nroute-pvc.yaml  nroute-topology-config.yaml
models/: .gitkeep  anomaly_iforest_v1.joblib  congestion_xgb_v1.joblib
scripts/: .gitkeep  fix_unicode.py  generate_sample_traffic.py  train_baseline_models.py  train_gnn_baseline.py  validate_branch_name.py  validate_commit_msg.py  validate_repository.py  verify_rl.py
src/nroute/: __init__.py  __main__.py  exceptions.py
src/nroute/api/: __init__.py  server.py
src/nroute/audit/: __init__.py
src/nroute/cli/: __init__.py  api_cmd.py  configs_cmd.py  detect_cmd.py  export_cmd.py  main.py  predict_cmd.py  route_cmd.py  simulate_cmd.py  topology_cmd.py  train_cmd.py  twin_cmd.py
src/nroute/core/: __init__.py  config.py  generators.py  metrics.py  openconfig.py  query.py  topology.py  traffic.py
src/nroute/ingestion/: __init__.py  config_parser.py  csv_json.py  netflow.py  normalizer.py  pcap.py  snmp.py
src/nroute/ml/: __init__.py  anomaly.py  congestion.py  feature_eng.py  features.py  model_store.py  rl_env.py
src/nroute/routing/: __init__.py  ai.py  base.py  base_nn.py  bellman_ford.py  bfs.py  dijkstra.py  ecmp.py  negotiation.py  registry.py  rl_router.py
src/nroute/simulation/: __init__.py  change_impact.py  collector.py  digital_twin.py  engine.py  failure_injector.py  rca.py  traffic_gen.py
src/nroute/utils/: __init__.py  (+4 more)
tests/: conftest.py  test_digital_twin.py
tests/benchmarks/: test_bench_rca.py  test_bench_routing.py  test_bench_simulation.py  test_bench_topology.py  test_bench_traffic.py
tests/integration/: test_cli.py  test_full_pipeline.py  test_real_data.py  test_security_api.py
tests/unit/: test_ai_router.py  test_anomaly.py  test_api_cors.py  test_api_server.py  test_base_nn.py  test_base_router.py  test_bellman_ford.py  test_bfs.py  test_collator.py  test_collector.py  test_config.py  test_config_parser.py  test_congestion.py  test_cors_security.py  test_detect_cmd.py  test_dijkstra.py  test_ecmp.py  test_engine.py  test_exceptions.py  test_exporters.py  test_extensibility.py  test_failure_injector.py  test_feature_eng.py  test_gcn.py  test_generators.py  test_gnn_dataset.py  test_gnn_features.py  test_gnn_models.py  test_gnn_trainer.py  test_governance_security.py  test_graphsage.py  test_ingestion.py  test_issue_fix.py  test_live_console.py  test_loader.py  test_logging.py  test_metrics.py  test_model_store.py  test_model_store_error.py  test_negotiation.py  (+23 more)
(+18 files in other folders)
