[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nroute"
version = "0.1.0"
description = "AI-Based Smart Network Routing System — simulate, visualize, and optimize network routing with AI/ML."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Saket", email = "saket@example.com"},
]
keywords = [
    "network-routing",
    "ai",
    "machine-learning",
    "reinforcement-learning",
    "simulation",
    "dijkstra",
    "congestion-prediction",
    "anomaly-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.5",
    "structlog>=24.1",
    "torch>=2.2",
    "stable-baselines3>=2.2",
    "gymnasium>=0.29",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "plotext>=5.2",
    "scapy>=2.5",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "python-multipart>=0.0.7",
    "uvicorn>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "pre-commit>=3.6",
    "pip-audit>=2.7",
]

[project.scripts]
nroute = "nroute.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Saket745/AI-Based-Smart-Network-Routing-System"
Repository = "https://github.com/Saket745/AI-Based-Smart-Network-Routing-System"
Issues = "https://github.com/Saket745/AI-Based-Smart-Network-Routing-System/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nroute"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "torch.*",
    "stable_baselines3.*",
    "gymnasium.*",
    "sklearn.*",
    "xgboost.*",
    "scapy.*",
    "joblib.*",
    "plotext",
    "pandas.*",
    "yaml.*",
    "numpy.*",
    "click.*",
    "rich.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
]

[tool.coverage.run]
source = ["nroute"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
